# German-Credit-Scoring

./: .gitignore  Dockerfile  Makefile  README.md  config.json  environment.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
docs/: mkdocs.yml
docs/docs/: index.md
german_credit_scoring/: __init__.py  application.py  dataset.py  eda.py  features.py  load_model.py  plots.py
german_credit_scoring/modeling/: predict.py  train.py
mlruns/.trash/469363919412789764/: meta.yaml
mlruns/.trash/469363919412789764/3e5cb2e1659d4aa89b2ef6a0770282a3/: meta.yaml
mlruns/.trash/469363919412789764/fc56e0b8fbca4489ab3100fff7071a7e/: meta.yaml
mlruns/0/: meta.yaml
mlruns/692688493119941248/: meta.yaml
mlruns/692688493119941248/11099fb1e765420abfb8ab4b89f7c882/: meta.yaml
mlruns/692688493119941248/136158bd1c3b455b94a2da1d009f2a65/: meta.yaml
mlruns/692688493119941248/1db9793ddfb840258a271f9975789fde/: meta.yaml
mlruns/692688493119941248/313723457e6f40c9919a369a8acf3f0d/: meta.yaml
mlruns/692688493119941248/3cffac57ad6f4c8392e8bc2938c8a187/: meta.yaml
mlruns/692688493119941248/5514b4f1a6744da7bae3a5b6aded3a7f/: meta.yaml
mlruns/692688493119941248/7154a8cea7fb45a3a118666614d34dcb/: meta.yaml
mlruns/692688493119941248/b4da649823e94aba979805d423544261/: meta.yaml
mlruns/692688493119941248/f54aeab77c44483d82ba80b697fb0ea4/: meta.yaml
mlruns/models/dummy_classifier/: meta.yaml
mlruns/models/logistic_regression/: meta.yaml
models/: model.xgb  threshold.txt
notebooks/: baseline.ipynb
streamlit/: application.py  eda.py
(+54 files in other folders)
