[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "german_credit_scoring"
version = "0.0.1"
description = "Classifying people, described by a set of attributes, as reliable or unreliable borrowers."
authors = [
  { name = "Kanstantsin Hukish" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''


